Hibák helyrehozása (megint)
fájlokat újraraktam megint mert elrontottam